# voice-assistant

./: .env.example  .gitignore  README.md  app.py  config.py  llm.py  main.py  pyproject.toml  stt.py  test_stt.py  test_tts.py  tts.py
src/: config.py  llm.py  stt.py  tts.py
tests/: test_llm.py
